--- a/package.json
+++ b/package.json
@@ -9,22 +9,35 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "lint": "expo lint",
-    "dev": "expo start --tunnel -c"
+    "generate": "tsx scripts/generateQuestionFileMap.ts",
+    "tag": "tsx scripts/tagExtractor.ts",
+    "image": "tsx scripts/generateTagToBackgroundImage.ts",
+    "dev": "expo start --tunnel -c",
+    "build": "eas build -p android --profile preview",
+    "secret": "eas env:create --name EXPO_PUBLIC_GOOGLE_WEB_CLIENT_ID --value 258669826284-p2osv39bjllnkrko1gd09gil3i9kk4ao.apps.googleusercontent.com --environment preview",
+    "list": "eas env:list"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
+    "@react-navigation/material-top-tabs": "^7.3.4",
     "@react-navigation/native": "^7.1.6",
     "expo": "~53.0.20",
+    "expo-auth-session": "~6.2.1",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
+    "expo-document-picker": "~13.1.6",
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
+    "expo-image-picker": "~16.1.4",
+    "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.7",
     "expo-router": "~5.1.4",
     "expo-splash-screen": "~0.30.10",
+    "expo-sqlite": "~15.2.14",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.10",
@@ -37,14 +50,9 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
+    "react-native-tab-view": "^4.1.2",
     "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5",
-    "expo-image-picker": "~16.1.4",
-    "@react-native-async-storage/async-storage": "2.1.2",
-    "expo-linear-gradient": "~14.1.5",
-    "expo-auth-session": "~6.2.1",
-    "expo-document-picker": "~13.1.6",
-    "expo-sqlite": "~15.2.14"
+    "react-native-webview": "13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -53,5 +61,12 @@
     "eslint-config-expo": "~9.2.0",
     "typescript": "~5.8.3"
   },
-  "private": true
+  "private": true,
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "listUnknownPackages": false
+      }
+    }
+  }
 }
