--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint",
     "generate": "tsx scripts/generateQuestionFileMap.ts",
     "tag": "tsx scripts/tagExtractor.ts",
     "image": "tsx scripts/generateTagToBackgroundImage.ts",
-    "dev": "expo start --tunnel -c",
+    "dev": "expo start -c",
     "build": "eas build -p android --profile preview",
     "secret": "eas env:create --name EXPO_PUBLIC_GOOGLE_WEB_CLIENT_ID --value 258669826284-p2osv39bjllnkrko1gd09gil3i9kk4ao.apps.googleusercontent.com --environment preview",
     "list": "eas env:list"
