--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "tag": "tsx scripts/tagExtractor.ts",
     "image": "tsx scripts/generateTagToBackgroundImage.ts",
     "dev": "expo start --tunnel -c",
-    "build": "eas build -p android --profile preview",
+    "build:preview": "eas build -p android --profile preview",
+    "build:android": "eas build --profile development --platform android",
+    "build:ios": "eas build --profile development --platform ios",
     "secret": "eas env:create --name EXPO_PUBLIC_GOOGLE_WEB_CLIENT_ID --value 258669826284-p2osv39bjllnkrko1gd09gil3i9kk4ao.apps.googleusercontent.com --environment preview",
-    "list": "eas env:list"
+    "list": "eas env:list",
+    "dev:cli": "npx expo start --dev-client --tunnel"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
@@ -53,7 +56,8 @@
     "react-native-tab-view": "^4.1.2",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "expo-sharing": "~13.1.5"
+    "expo-sharing": "~13.1.5",
+    "expo-dev-client": "~5.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
