--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@react-native-google-signin/google-signin": "^15.0.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
-    "@react-navigation/material-top-tabs": "^7.3.4",
+    "@react-navigation/material-top-tabs": "^7.3.5",
     "@react-navigation/native": "^7.1.6",
     "expo": "~53.0.20",
     "expo-auth-session": "~6.2.1",
@@ -53,6 +53,7 @@
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-pager-view": "6.7.1",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
