--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "tag": "tsx scripts/tagExtractor.ts",
     "image": "tsx scripts/generateTagToBackgroundImage.ts",
     "dev": "expo start --tunnel -c",
-    "build:preview": "eas build -p android --profile preview",
+    "build:preview": "eas build -p android --profile preview --clear-cache",
     "build:android": "eas build --profile development --platform android",
     "build:ios": "eas build --profile development --platform ios",
     "secret": "eas env:create --name EXPO_PUBLIC_GOOGLE_WEB_CLIENT_ID --value 258669826284-p2osv39bjllnkrko1gd09gil3i9kk4ao.apps.googleusercontent.com --environment preview",
